kind_cluster/k8s/templates/networkpolicies/Gate_api_dash_egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-front-api-egress
  namespace: saleor1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: saleor-gateway-nginx

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: api
      ports:
        - protocol: TCP
          port: 8000

    - to:
        - podSelector:
            matchLabels:
              app: dash
      ports:
        - protocol: TCP
          port: 80
# note -> we allowed egress from gateway to both api,dash as we put default deny with ingress,egress so gateway is a pod so if we didn't put an ingress,egress for it  to other pods it will not be allowed to pass the traffic to both of them as egress.
