kind_cluster/k8s/templates/networkpolicies/api-postg-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-post-ingress
  namespace: saleor1
spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api

      ports:
        - protocol: TCP
          port: 5432
