kind_cluster/k8s/templates/networkpolicies/front-api-ingrss.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-api-ingress
  namespace: saleor1
spec:
  podSelector:
    matchLabels:
      app: api

  policyTypes:

    - Ingress
  ingress:
    - from:
        - podSelector:

            matchLabels:
              app: dash
      ports:
        - protocol: TCP
          port: 8000
