kind_cluster/k8s/templates/networkpolicies/gateway-dns-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-dns-egress
  namespace: saleor1

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: saleor-gateway-nginx


  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns

      ports:
        - protocol: TCP
          port: 53

        - protocol: UDP
          port: 53
#here we make connection between gateway that we build and dns ->    gateway-->(egress) => dns
